[gd_scene load_steps=19 format=3 uid="uid://dpjan4v2xq00l"]

[ext_resource type="Script" uid="uid://dp7t63xcla1pb" path="res://scripts/ui/game_ui.gd" id="1_u8ktk"]
[ext_resource type="Texture2D" uid="uid://b3rjy4bhgt3s0" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/ALL UI ASSETS on one sheet.png" id="2_nk8vc"]
[ext_resource type="Theme" uid="uid://ccm5jxuql5lku" path="res://assets/UI/in_game_ui.tres" id="3_sb36x"]
[ext_resource type="Script" uid="uid://cnxgraoqix7oe" path="res://scripts/ui/single_player_button.gd" id="4_u8ktk"]
[ext_resource type="Script" uid="uid://52wckpnsc27o" path="res://scripts/ui/vs_mode_button.gd" id="5_sb36x"]
[ext_resource type="Script" uid="uid://dld5632fsso3b" path="res://scripts/ui/menu_swapper_button.gd" id="7_a0oyh"]
[ext_resource type="Script" uid="uid://fto0tgvxt74d" path="res://scripts/ui/quit_game_button.gd" id="8_nk8vc"]
[ext_resource type="Script" uid="uid://pgabbnll6eps" path="res://scripts/ui/pause_button.gd" id="9_fbml3"]
[ext_resource type="Script" uid="uid://dcf87jgp0gdh2" path="res://scripts/ui/return_button.gd" id="9_sb36x"]
[ext_resource type="Script" uid="uid://c328rlgsbjtgq" path="res://scripts/ui/switch_game_mode_button.gd" id="10_fbml3"]
[ext_resource type="Texture2D" uid="uid://blxsk1ycrie7v" path="res://assets/player/fighter/fighter-Tyrell-V1-shiny.png" id="11_8mgtm"]
[ext_resource type="Script" uid="uid://bgfa074o438wm" path="res://scripts/ui/label_disconnected_context.gd" id="12_xshwr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m363j"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u8ktk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fbml3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nk8vc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i3dfh"]
texture = ExtResource("2_nk8vc")
region_rect = Rect2(133, 740, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g0evh"]
texture = ExtResource("2_nk8vc")
region_rect = Rect2(165, 742, 22, 22)

[node name="GameUI" type="Control"]
process_mode = 3
physics_interpolation_mode = 1
z_index = 100
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u8ktk")

[node name="OverworldUI" type="PanelContainer" parent="."]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_m363j")

[node name="MarginContainer" type="MarginContainer" parent="OverworldUI"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Title" type="Label" parent="OverworldUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 48
text = "Overworld UI"
horizontal_alignment = 1

[node name="FightingUI" type="PanelContainer" parent="."]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_m363j")

[node name="MarginContainer" type="MarginContainer" parent="FightingUI"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Title" type="Label" parent="FightingUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 48
text = "Fighting UI"
horizontal_alignment = 1

[node name="MainMenuScreen" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_u8ktk")

[node name="Margin" type="MarginContainer" parent="MainMenuScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Background" type="NinePatchRect" parent="MainMenuScreen/Margin"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
texture = ExtResource("2_nk8vc")
region_rect = Rect2(107, 107, 26, 26)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="MainMenuScreen/Margin/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Title" type="Label" parent="MainMenuScreen/Margin/Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 48
text = "Punk Monk Demo"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuScreen/Margin/Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="SinglePlayer" type="Button" parent="MainMenuScreen/Margin/Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Start Game"
script = ExtResource("4_u8ktk")

[node name="VSMode" type="Button" parent="MainMenuScreen/Margin/Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "VS Mode"
script = ExtResource("5_sb36x")

[node name="Settings" type="Button" parent="MainMenuScreen/Margin/Background/MarginContainer/VBoxContainer" node_paths=PackedStringArray("switch_to_node", "current_node")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Settings"
script = ExtResource("7_a0oyh")
switch_to_node = NodePath("../../../../../../SettingsScreen")
current_node = NodePath("../../../../..")

[node name="Quit" type="Button" parent="MainMenuScreen/Margin/Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Quit"
script = ExtResource("8_nk8vc")

[node name="VSModeMenuScreen" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_u8ktk")

[node name="Margin" type="MarginContainer" parent="VSModeMenuScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Background" type="NinePatchRect" parent="VSModeMenuScreen/Margin"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
texture = ExtResource("2_nk8vc")
region_rect = Rect2(107, 107, 26, 26)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="VSModeMenuScreen/Margin/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Title" type="Label" parent="VSModeMenuScreen/Margin/Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 48
text = "VS Mode Demo"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VSModeMenuScreen/Margin/Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VSModeMenuScreen/Margin/Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="LocalPlay" type="Button" parent="VSModeMenuScreen/Margin/Background/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Local Play"
script = ExtResource("5_sb36x")

[node name="Online Play" type="Button" parent="VSModeMenuScreen/Margin/Background/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Online Play"

[node name="SinglePlayer" type="Button" parent="VSModeMenuScreen/Margin/Background/MarginContainer/VBoxContainer" node_paths=PackedStringArray("switch_to_node", "current_node")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Single Player"
script = ExtResource("7_a0oyh")
switch_to_node = NodePath("../../../../../../SettingsScreen")
current_node = NodePath("../../../../..")

[node name="Settings" type="Button" parent="VSModeMenuScreen/Margin/Background/MarginContainer/VBoxContainer" node_paths=PackedStringArray("switch_to_node", "current_node")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Settings"
script = ExtResource("7_a0oyh")
switch_to_node = NodePath("../../../../../../SettingsScreen")
current_node = NodePath("../../../../..")

[node name="Quit" type="Button" parent="VSModeMenuScreen/Margin/Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Quit"
script = ExtResource("8_nk8vc")

[node name="PauseScreen" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_fbml3")

[node name="Background" type="NinePatchRect" parent="PauseScreen"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_nk8vc")
region_rect = Rect2(107, 107, 26, 26)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="PauseScreen/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Title" type="Label" parent="PauseScreen/Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 48
text = "Game Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen/Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="Return" type="Button" parent="PauseScreen/Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Return"
script = ExtResource("9_fbml3")

[node name="SwitchGameMode" type="Button" parent="PauseScreen/Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "---"
script = ExtResource("10_fbml3")

[node name="Settings" type="Button" parent="PauseScreen/Background/MarginContainer/VBoxContainer" node_paths=PackedStringArray("current_node")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Settings"
script = ExtResource("7_a0oyh")
current_node = NodePath("../../../..")

[node name="Quit" type="Button" parent="PauseScreen/Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Quit"
script = ExtResource("8_nk8vc")

[node name="SettingsScreen" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nk8vc")

[node name="Margin" type="MarginContainer" parent="SettingsScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Background" type="NinePatchRect" parent="SettingsScreen/Margin"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
texture = ExtResource("2_nk8vc")
region_rect = Rect2(107, 107, 26, 26)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="SettingsScreen/Margin/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Title" type="Label" parent="SettingsScreen/Margin/Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 48
text = "\"Settings\""
horizontal_alignment = 1

[node name="Return" type="Button" parent="SettingsScreen/Margin/Background/MarginContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxTexture_i3dfh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_g0evh")
theme_override_styles/normal = SubResource("StyleBoxTexture_g0evh")
icon_alignment = 1
expand_icon = true
script = ExtResource("9_sb36x")

[node name="CharacterSelectScreen" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nk8vc")

[node name="Margin" type="MarginContainer" parent="CharacterSelectScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Background" type="NinePatchRect" parent="CharacterSelectScreen/Margin"]
custom_minimum_size = Vector2(600, 550)
layout_mode = 2
texture = ExtResource("2_nk8vc")
region_rect = Rect2(107, 107, 26, 26)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="CharacterSelectScreen/Margin/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Title" type="Label" parent="CharacterSelectScreen/Margin/Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 48
text = "Character Select"
horizontal_alignment = 1

[node name="Return" type="Button" parent="CharacterSelectScreen/Margin/Background/MarginContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxTexture_i3dfh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_g0evh")
theme_override_styles/normal = SubResource("StyleBoxTexture_g0evh")
icon_alignment = 1
expand_icon = true
script = ExtResource("9_sb36x")

[node name="MarginContainer" type="MarginContainer" parent="CharacterSelectScreen/Margin/Background/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 150

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Player 1"
horizontal_alignment = 1

[node name="Spacer" type="MarginContainer" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Punk" type="Button" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
toggle_mode = true
text = "Punk"
icon = ExtResource("11_8mgtm")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="Punk (Alt)" type="Button" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
toggle_mode = true
text = "Punk (Alt)"
icon = ExtResource("11_8mgtm")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="Label" type="Label" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_sb36x")
theme_override_font_sizes/font_size = 24
text = "Player 2"
horizontal_alignment = 1

[node name="Spacer" type="MarginContainer" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Punk" type="Button" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
toggle_mode = true
text = "Punk"
icon = ExtResource("11_8mgtm")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="Punk (Alt)" type="Button" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
toggle_mode = true
text = "Punk (Alt)"
icon = ExtResource("11_8mgtm")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Button" type="Button" parent="CharacterSelectScreen/Margin/Background/MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_sb36x")
text = "Fight"

[node name="ControllerDisconnectedScreen" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ControllerDisconnectedScreen"]
layout_mode = 2

[node name="Label" type="Label" parent="ControllerDisconnectedScreen/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_sb36x")
theme_override_constants/line_spacing = 60
theme_override_font_sizes/font_size = 36
text = "Controller Diconnected...
Reconnect to continue"
horizontal_alignment = 1
script = ExtResource("12_xshwr")

[connection signal="on_paused_game_pressed" from="." to="PauseScreen/Background/MarginContainer/VBoxContainer/SwitchGameMode" method="on_paused_game_pressed"]
[connection signal="update_disconnect_screen" from="." to="ControllerDisconnectedScreen/MarginContainer/Label" method="update_disconnect_screen"]
[connection signal="start_singleplayer_request" from="MainMenuScreen/Margin/Background/MarginContainer/VBoxContainer/SinglePlayer" to="." method="start_singleplayer_request"]
[connection signal="start_vs_mode_request" from="MainMenuScreen/Margin/Background/MarginContainer/VBoxContainer/VSMode" to="." method="start_vs_mode_request"]
[connection signal="swap_menu_request" from="MainMenuScreen/Margin/Background/MarginContainer/VBoxContainer/Settings" to="." method="swap_menu_request"]
[connection signal="quit_game_request" from="MainMenuScreen/Margin/Background/MarginContainer/VBoxContainer/Quit" to="." method="on_quit_game_button_released"]
[connection signal="start_vs_mode_request" from="VSModeMenuScreen/Margin/Background/MarginContainer/VBoxContainer/HBoxContainer/LocalPlay" to="." method="start_vs_mode_request"]
[connection signal="swap_menu_request" from="VSModeMenuScreen/Margin/Background/MarginContainer/VBoxContainer/SinglePlayer" to="." method="swap_menu_request"]
[connection signal="swap_menu_request" from="VSModeMenuScreen/Margin/Background/MarginContainer/VBoxContainer/Settings" to="." method="swap_menu_request"]
[connection signal="quit_game_request" from="VSModeMenuScreen/Margin/Background/MarginContainer/VBoxContainer/Quit" to="." method="on_quit_game_button_released"]
[connection signal="pause_game_request" from="PauseScreen/Background/MarginContainer/VBoxContainer/Return" to="." method="pause_game_pressed"]
[connection signal="on_switch_game_mode" from="PauseScreen/Background/MarginContainer/VBoxContainer/SwitchGameMode" to="." method="on_switch_game_mode"]
[connection signal="swap_menu_request" from="PauseScreen/Background/MarginContainer/VBoxContainer/Settings" to="." method="swap_menu_request"]
[connection signal="quit_game_request" from="PauseScreen/Background/MarginContainer/VBoxContainer/Quit" to="." method="on_quit_game_button_released"]
[connection signal="swap_menu_to_previous" from="SettingsScreen/Margin/Background/MarginContainer/Return" to="." method="swap_menu_to_previous"]
[connection signal="swap_menu_to_previous" from="CharacterSelectScreen/Margin/Background/MarginContainer/Return" to="." method="swap_menu_to_previous"]
